# ks3_parser

./: .gitignore  AGENTS.md  Cargo.toml  README.md  config.toml
.github/workflows/: ci.yml  release.yml
src/: lib.rs  main.rs
src/tui/: app.rs  clipboard.rs  mod.rs  ui.rs
