[package]
name = "ks3_parser"
version = "0.2.0"
edition = "2024"

[dependencies]
serde = { version = "1", features = ["derive"] }
toml = "0.8"
csv = "1.3"
anyhow = "1"
encoding_rs = "0.8"
ratatui = "0.29"
crossterm = "0.28"
clap = { version = "4", features = ["derive"] }
arboard = "3"

[dev-dependencies]
tempfile = "3"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(coverage)"] }
